@@ -19,6 +19,7 @@
 
 #include "common.h"
 #include "sysinfo.h"
+#include "zbxjson.h"
 
 static int	get_fs_size_stat(const char *fs, zbx_uint64_t *total, zbx_uint64_t *free,
 		zbx_uint64_t *used, double *pfree, double *pused)
@@ -157,4 +158,36 @@ int	VFS_FS_SIZE(const char *cmd, const char *param, unsigned flags, AGENT_RESULT
 			return (fl[i].function)(fsname, result);
 
 	return SYSINFO_RET_FAIL;
+}
+
+int	VFS_FS_DISCOVERY(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result)
+{
+	int		i, rc, ret = SYSINFO_RET_FAIL;
+	struct statfs	*mntbuf;
+	struct zbx_json	j;
+
+	zbx_json_init(&j, ZBX_JSON_STAT_BUF_LEN);
+
+	zbx_json_addarray(&j, cmd);
+
+	if (0 != (rc = getmntinfo(&mntbuf, MNT_WAIT)))
+	{
+		for (i = 0; i < rc; i++)
+		{
+			zbx_json_addobject(&j, NULL);
+			zbx_json_addstring(&j, "{#FSNAME}", mntbuf[i].f_mntonname, ZBX_JSON_TYPE_STRING);
+			zbx_json_addstring(&j, "{#FSTYPE}", mntbuf[i].f_fstypename, ZBX_JSON_TYPE_STRING);
+			zbx_json_close(&j);
+		}
+
+		ret = SYSINFO_RET_OK;
+	}
+
+	zbx_json_close(&j);
+
+	SET_STR_RESULT(result, zbx_strdup(NULL, j.buffer));
+
+	zbx_json_free(&j);
+
+	return ret;
 }
